--- a/package.json
+++ b/package.json
@@ -1,13 +1,4 @@
 {
-  "name": "dt-money",
-  "version": "1.0.0",
-  "main": "index.ts",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
   "dependencies": {
     "expo": "~53.0.22",
     "expo-status-bar": "~2.2.3",
@@ -17,7 +8,17 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "main": "index.ts",
+  "name": "dt-money",
+  "private": true,
+  "scripts": {
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "start": "expo start",
+    "web": "expo start --web"
+  },
+  "version": "1.0.0"
 }
