--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~9.2.0",
     "prettier": "^3.6.2",
     "typescript": "~5.8.3"
   },
@@ -17,6 +19,7 @@
   "scripts": {
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "lint": "expo lint",
     "start": "expo start",
     "web": "expo start --web"
   },
