--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "dependencies": {
     "expo": "~53.0.22",
     "expo-status-bar": "~2.2.3",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "0.79.6"
+    "react-native": "0.79.6",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -11,6 +14,8 @@
     "eslint": "^9.0.0",
     "eslint-config-expo": "~9.2.0",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
   },
   "main": "index.ts",
