feat: add DismissKeyboardView component

--- a/app.json
+++ b/app.json
@@ -25,6 +25,9 @@
     "version": "1.0.0",
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "react-native-edge-to-edge"
+    ]
   }
 }
